--- a/index.html
+++ b/index.html
@@ -382,12 +382,13 @@
                             type="email" 
                             name="footer-email" 
                             placeholder="E-mail" 
-                            class="footer-input">
+                            class="footer-input"/>
                         </label>
                         <button type="submit" class="footer-btn">Subscribe <svg class="subscribe-icon" width="24px" height="24px">
                             <use href="./images/symbol-defs-modal.svg#icon-Frame-3"></use>
                         </svg>
                     </button>
+                    </form>
                 </div>
         </div>
         </div>
