--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
                     </li>
                 </ul>
                 </div>
+                <div class="footer-form-container">
                 <div class="footer-form-wrap">
                     <p class="footer-form-name">Subscribe</p>
                     <form class="footer-form">
@@ -389,6 +390,7 @@
                         </svg>
                     </button>
                     </form>
+                    </div>
                 </div>
         </div>
         </div>
