--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 </div>
         </div>
     </footer> 
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
             <button type="button" class="modal-open-btn">
                 <svg class="modal-close-btn" width="8" height="8">
@@ -410,7 +410,7 @@
                             minlength="2"
                             id="user-name"
                             />
-                            <svg class="modal-field-icon" width="18" height="18">
+                            <svg class="modal-field-icon" width="18" height="24">
                                 <use href="./images/symbol-defs-modal.svg#icon-person-black-18dp-1"></use>
                             </svg>
                         </div>
