--- a/index.html
+++ b/index.html
@@ -461,7 +461,9 @@
                                     <svg class="icon-chacked" width="10" height="8">
                                     <use href="./images/symbol-defs-modal.svg#icon-icon-chacked"></use>
                                 </svg>
-                            </span>I accept the terms and conditions of the <a href="" class="privacy-policy-text"> Privacy Policy</a></label>
+                            </span>I accept the terms and conditions of the
+                            <a href="" class="privacy-policy-text"> Privacy Policy</a>
+                            </label>
                             </div>
                 <button type="submit" class="button-submit">Send</button>
             </form>
