--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 </div>
         </div>
     </footer> 
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button type="button" class="modal-open-btn">
                 <svg class="modal-close-btn" width="8" height="8">
