--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
                 </div>
         </div>
     </footer> 
-    <div class="backdrop">
+    <!-- backdrop -->
+    <div class="backdrop is-open">
         <div class="modal">
             <button type="button" class="modal-open-btn">
                 <svg class="modal-close-btn" width="8" height="8">
@@ -443,14 +444,14 @@
                             </svg>
                         </div>
                     </div>
-                        <div class="modal-input-wrap">
+                        <div class="modal-text-area-wrap">
                             <label for="user-comment" class="modal-label">Comment</label>
                             <textarea name="user-comment"
                             id="user-comment" 
                             placeholder="Text input"
                             class="modal-text-area"></textarea>
                         </div>
-                            <div class="modal-field">
+                            <div class="modal-checkbox-wrap">
                                 <input type="checkbox" 
                             name="user-privacy"
                             id="user-privacy"
