--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         </div>
     </footer> 
     <!-- backdrop -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button type="button" class="modal-open-btn">
                 <svg class="modal-close-btn" width="8" height="8">
